kubernetes/apps/base/media/arr/sabnzbd/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sabnzbd
  namespace: media
spec:
  selector:
    app: sabnzbd
  ports:
    - name: http
      port: 8080
      targetPort: http
