kubernetes/apps/base/media/arr/sabnzbd/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sabnzbd-ingress
  namespace: traefik
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`sabnzbd.theblacklodge.dev`)
      kind: Rule
      services:
        - name: sabnzbd
          port: 8080
